--- a/.gitignore
+++ b/.gitignore
@@ -97,7 +97,7 @@ bin
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -141,6 +141,7 @@ tags
 # End of https://www.toptal.com/developers/gitignore/api/go,emacs,macos,linux,vim
 
 log.*
+*.log
 *.txt
 eth2-monitor
 !LICENSE.txt
