--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,8 @@ jobs:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
   build-and-push-image:
     runs-on: ubuntu-latest
-    needs: [static-analysis, build]
+    # needs: [static-analysis, build]
+    needs: [build]
     permissions:
       contents: read
       packages: write
