--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -26,6 +26,10 @@ jobs:
           # When `install-mode` is `goinstall` the value can be v1.2.3, `latest`, or the hash of a commit.
           version: v1.54
 
+          # XXX Workaround for https://github.com/golangci/golangci-lint-action/issues/135
+          # Optional: if set to true, then the action won't cache or restore ~/go/pkg.
+          skip-pkg-cache: true
+
           # Optional: working directory, useful for monorepos
           # working-directory: somedir
 
@@ -41,9 +45,6 @@ jobs:
           # Optional: if set to true, then all caching functionality will be completely disabled,
           #           takes precedence over all other caching options.
           # skip-cache: true
-
-          # Optional: if set to true, then the action won't cache or restore ~/go/pkg.
-          # skip-pkg-cache: true
 
           # Optional: if set to true, then the action won't cache or restore ~/.cache/go-build.
           # skip-build-cache: true
